Added two types of presentation slides

--- a/presentation_groupb.html
+++ b/presentation_groupb.html
@@ -9,7 +9,7 @@
 
 
 
-  <meta name="date" content="2023-12-16" />
+  <meta name="date" content="2023-12-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3140,7 +3140,7 @@ ul.task-list{list-style: none;}
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2023-12-16</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2023-12-17</p>
           </hgroup>
   </slide>
 
@@ -3162,6 +3162,42 @@ ul.task-list{list-style: none;}
   font-size: 50% !important;
 }
 </style>
+
+<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Introduction and Objectives</h2></hgroup><article  id="introduction-and-objectives">
+
+</article></slide><slide class=""><hgroup><h2>Objectives and potential impacts</h2></hgroup><article  id="objectives-and-potential-impacts">
+
+<ul>
+<li>Understand the value addition of Text Mining</li>
+<li>Being able to carry our Exploratory Data Analysis (EDA) on text data using R</li>
+<li>Apply unsupervised methods for topic modeling</li>
+<li>Develop several supervised models using text</li>
+<li>Practice and master the tidy text and <code>quanteda</code> packages in R</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Project description</h2></hgroup><article  id="project-description">
+
+<ul>
+<li>Methods used</li>
+<li>What inspired us ?</li>
+<li>How did we collect the data ? What are the risks of using this strategy ?</li>
+</ul>
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Webscrapping</h2></hgroup><article  id="webscrapping">
+
+</article></slide><slide class=""><hgroup><h2>Immoscout website</h2></hgroup><article  id="immoscout-website">
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>R Package creation</h2></hgroup><article  id="r-package-creation">
+
+</article></slide><slide class=""><hgroup><h2>Package functions</h2></hgroup><article  id="package-functions">
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Shiny App</h2></hgroup><article  id="shiny-app">
+
+</article></slide><slide class=""><hgroup><h2>Price estimation</h2></hgroup><article  id="price-estimation">
+
+</article></slide><slide class=""><hgroup><h2>Find 5 most similar appartments</h2></hgroup><article  id="find-5-most-similar-appartments">
+
+</article></slide><slide class=""><hgroup><h2>Impact of square meters on the price</h2></hgroup><article  id="impact-of-square-meters-on-the-price"></article></slide>
 
 
   <slide class="backdrop"></slide>
